; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zpl_file.c_zpl_aio_read.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zpl_file.c_zpl_aio_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kiocb = type { i32 }
%struct.iovec = type { i32 }

@VERIFY_WRITE = common dso_local global i32 0, align 4
@UIO_USERSPACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.kiocb*, %struct.iovec*, i64, i32)* @zpl_aio_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @zpl_aio_read(%struct.kiocb* %0, %struct.iovec* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.kiocb*, align 8
  %7 = alloca %struct.iovec*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.kiocb* %0, %struct.kiocb** %6, align 8
  store %struct.iovec* %1, %struct.iovec** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load %struct.iovec*, %struct.iovec** %7, align 8
  %13 = load i32, i32* @VERIFY_WRITE, align 4
  %14 = call i64 @generic_segment_checks(%struct.iovec* %12, i64* %8, i64* %11, i32 %13)
  store i64 %14, i64* %10, align 8
  %15 = load i64, i64* %10, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i64, i64* %10, align 8
  store i64 %18, i64* %5, align 8
  br label %26

19:                                               ; preds = %4
  %20 = load %struct.kiocb*, %struct.kiocb** %6, align 8
  %21 = load %struct.iovec*, %struct.iovec** %7, align 8
  %22 = load i64, i64* %8, align 8
  %23 = load i64, i64* %11, align 8
  %24 = load i32, i32* @UIO_USERSPACE, align 4
  %25 = call i64 @zpl_iter_read_common(%struct.kiocb* %20, %struct.iovec* %21, i64 %22, i64 %23, i32 %24, i32 0)
  store i64 %25, i64* %5, align 8
  br label %26

26:                                               ; preds = %19, %17
  %27 = load i64, i64* %5, align 8
  ret i64 %27
}

declare dso_local i64 @generic_segment_checks(%struct.iovec*, i64*, i64*, i32) #1

declare dso_local i64 @zpl_iter_read_common(%struct.kiocb*, %struct.iovec*, i64, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
